--- a/twitter/index.html
+++ b/twitter/index.html
@@ -35,7 +35,7 @@
     <div class="bar">
       <div class="content">
         <ul>
-          <li>
+          <li class="active">
             <span>Tweets</span>
             <strong>98</strong>
           </li>
